2005-02-10  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/Makefile.am: add wrappers to distclean.

2005-02-10  Mark McLoughlin  <markmc@redhat.com>

	Add ability for delegates to commit changes.

	* lib/userprofile.py:
	(ProfileChange.__init__): allow a delegate to be
	passed to the constructor.
	(SourceDelegate.__init__): kill the "changes class" idea.
	(SourceDelegate.commit_change): add hook for delegates
	to implement.
	(ProfileSource.commit_change): if a change is associated
	with a delegate, commit the change via the delegate.
	
	* lib/sources/filessource.py:
	(FilesSource.commit_change): chain up to ProfileSource.commit_change.
	
	* lib/sources/gconfsource.py:
	(GConfSource.commit_change): ditto.
	
	* lib/sources/paneldelegate.py: associate changes with the delegate
	and add a commit_change() stub. Just need to figure out how in hell
	to do it now.

Thu Feb 10 13:30:58 CET 2005 Daniel Veillard <veillard@redhat.com>

	* ISSUES Makefile.am TODO sabayon.spec.in: added an ISSUES file
	  listing the open questions we need feedback on, added to
	  dist and spec file.

Thu Feb 10 12:49:53 CET 2005 Daniel Veillard <veillard@redhat.com>

	* lib/Makefile.am: cosmetic cleanup
	* admin-tool/Makefile.am: making sure the desktop-profiles dir
	  is created
	* admin-tool/profilesdialog.py: renamed user to sabayon from protouser
	* Makefile.am sabayon.spec.in: added make rpm target as it's far
	  more convenient right now

Thu Feb 10 12:05:38 CET 2005 Daniel Veillard <veillard@redhat.com>

	* lib/Makefile.am: make sure we clean up and rebuild config.py

Thu Feb 10 11:22:18 CET 2005 Daniel Veillard <veillard@redhat.com>

	* admin-tool/Makefile.am lib/Makefile.am lib/config.py.in:
	  moving sabayon-session and sabayon-monitor to @libexecdir@
	  since they should not be launched directly

Thu Feb 10 10:57:20 CET 2005 Daniel Veillard <veillard@redhat.com>

	* TODO: docs and man page

2005-02-09  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/profilesdialog.py: