@@ -1,3 +1,8 @@
+Thu Feb 10 18:33:48 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* lib/config.py.in: added shell and usermod entries
+	* lib/protosession.py: added set/reset shell methods
+
 2005-02-10  Mark McLoughlin  <markmc@redhat.com>
 
 	* admin-tool/Makefile.am: add wrappers to distclean.
